--- a/JavaScript/Array/稀疏数组和密集数组.md
+++ b/JavaScript/Array/稀疏数组和密集数组.md
@@ -9,7 +9,7 @@ let dense = [1, undefined, 3] // => 密集数组
 ```
 ## 两者的相同点
 
-### 两个数组都拥有相同的`length`属性
+### 两个数组都拥有相同的`length`属性值
 ```javascript
 [1, , 3].length === [1, undefined, 3].length // => true
 ```
@@ -23,39 +23,38 @@ let dense = [1, undefined, 3] // => 密集数组
 
 ## 两者的一些区别
 
-### 空缺数组 空缺处的下标将不存在
-
+### 空缺数组 空缺处的下标是不存在的
 ```javascript
 1 in [1, , 3] // => false
 1 in [1, undefined, 3] // => true
 ```
 
-### `forEach`将会跳过空缺项
+### `forEach`的执行将会跳过空缺项
 
 ```javascript
 [, , , ].forEach((item, index) => console.log(index)) // => nothing to console
 ```
 
-### `every`和`some`的操作也将会跳过空缺项
+### `every`和`some`的执行也会跳过空缺项
 
 ```javascript
 [1, , 3].every(item => typeof item === 'number') // => true
 [1, undefined, 3].every(item => typeof item === 'number') // => false
 ```
 
-### `filter`的操作也会跳过空缺项
+### `filter`的执行同样会跳过空缺项
 
 ```javascript
 [1, , 3].filter(() => true) // => [1, 3]
 ```
 
-### `map`的操作也会跳过空缺项，但是在返回值中会保留空缺项
+### `map`的执行同样会跳过空缺项，但是在返回值中会保留空缺项
 
 ```javascript
 [1, , 3].map(item => item + 1) // => [2, , 4]
 ```
 
-*虽说在chrome中执行会看到第二项变为了`undefined` 但如果你输入 1 in XXX 依然会发现这里是一个空缺项*
+*虽说在chrome中执行会看到第二项变为了`undefined` 但如果你输入 1 in XXX 依然会发现该下标是不存在的*
 
 ## 如何将空值转换为undefined填充
 
