--- a/JavaScript/Array/稀疏数组和密集数组.md
+++ b/JavaScript/Array/稀疏数组和密集数组.md
@@ -14,6 +14,8 @@ let dense = [1, undefined, 3] // => 密集数组
 [1, , 3].length === [1, undefined, 3].length // => true
 ```
 
+*所以使用`for`循环得到的结果也是一样的*
+
 ### 使用`join`方法时效果一样
 
 ```javascript
