--- a/JavaScript/Array/数组的破坏性与非破坏性原型方法.md
+++ b/JavaScript/Array/数组的破坏性与非破坏性原型方法.md
@@ -147,14 +147,51 @@ console.log(result) // => '1-2-3'
 
 > 这些函数的返回值分为三类
 > 1. 检测数组的内容并返回一个Boolean值
-> 2. 循环数组，并进行一些操作后返回一个新的数组(forEach木有返回值)
+> 2. 循环数组，并进行一些操作后返回一个新的数组
 > 3. 基于数组的元素进行一些运算并返回结果
 > 这里不再一一列举。。。
 
 1. every
 2. some
-3. forEach
-4. map
-5. filter
-6. reduce
-7. reduceRight
+3. map
+4. filter
+5. reduce
+6. reduceRight
+
+## 破坏性与非破坏性方法清单
+
+破坏性的方法：
++ shift
++ pop
++ unshift
++ push
++ splice
++ sort
++ reverse
+
+非破坏性的方法
++ concat
++ slice
++ join
++ index
++ indexOf
++ lastIndexOf
++ every
++ some
++ map
++ filter
++ reduce
++ reduceRight
+
+### TODO
+还有一些ES2015的新Array API木有写，以后会补上
+2017-02-12时，还有这些API木有写：
++ copyWithin
++ find
++ findIndex
++ fill
++ entries
++ includes
++ keys
++ values
++ forEach
